# citystackgen

./: Cargo.toml  README.md
example/: Pijnacker_NL.npz  cluster_0.json  cluster_1.json  cluster_10.json  cluster_11.json  cluster_12.json  cluster_2.json  cluster_3.json  cluster_4.json  cluster_5.json  cluster_6.json  cluster_7.json  cluster_8.json
src/: annealing_old.rs  constants.rs  gridstats.rs  lib.rs  main.rs  stream.rs
src/buildings/: builder.rs  combined_method.rs  inset_method.rs  irregular_method.rs  layer.rs  mod.rs  oobb_method.rs  place_method.rs  sweep_method.rs
src/context/: city_center.rs  mod.rs
src/enclosures/: builder.rs  geos_method.rs  layer.rs  mod.rs
src/model/: city.rs  domain.rs  grid.rs  layer.rs  mod.rs  template.rs
src/patchgridannealing/: aggregating.rs  annealing.rs  evaluating.rs  metrics.rs  mod.rs  patchgrid.rs  statistics.rs
src/plots/: builder.rs  layer.rs  mod.rs  oobb_method.rs  voronoi_method.rs
src/statistics/: distributions.rs  histogram.rs  mod.rs
src/streets/: builder.rs  dcel.rs  layer.rs  mod.rs  streets_experiment.rs
